# sunshine_virt_display

./: .coverage  .gitignore  AGENTS.md  Cargo.toml  Makefile  flake.nix  install.sh  main.py  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml  test.yml
crates/svd-cli/: Cargo.toml
crates/svd-cli/src/: main.rs
crates/svd-cli/tests/: cli.rs
crates/svd-daemon/: Cargo.toml
crates/svd-daemon/src/: config.rs  error.rs  handler.rs  lib.rs  main.rs  sleep.rs  watcher.rs
crates/svd-daemon/src/ipc/: framing.rs  mod.rs  server.rs
crates/svd-daemon/src/strategy/: mod.rs
crates/svd-daemon/src/strategy/kwin/: edid.rs  env.rs  kscreen.rs  mod.rs  state.rs  sysfs.rs
crates/svd-daemon/tests/: integration.rs
crates/svd-proto/: Cargo.toml
crates/svd-proto/src/: framing.rs  lib.rs
deploy/: config.toml.example  sunshine-vd.service
docs/dev/: api-notes.md  kwin-active-mode-verification-design.md  kwin-active-mode-verification-plan.md
docs/superpowers/plans/: 2026-06-18-rust-hardening.md
scripts/: debug_virt_display.py  test_install.sh
src/: display.py
src/daemon/: daemon.py  sunshineVD.service
src/drm/: __init__.py  bindings.py  crtc.py  drm_master.py  sysfs.py
src/drm/de/: hyprland.py  kwin.py
src/edid/: __init__.py  generator.py  timing.py  vic.py
tests/: test_display.py  test_drm_bindings.py  test_drm_crtc.py  test_drm_kwin.py  test_drm_master.py  test_drm_sysfs.py  test_edid_generator.py  test_edid_timing.py  test_edid_vic.py  test_hyprland.py  test_main.py
