[package]
name = "svd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unprivileged CLI for sunshine-virt-display"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
svd-proto = { path = "../svd-proto" }

[[bin]]
name = "svd"
path = "src/main.rs"
