[package]
name = "svd-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Privileged daemon for sunshine-virt-display"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
svd-proto = { path = "../svd-proto" }
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "4"

[lib]
name = "svd_daemon"
path = "src/lib.rs"

[[bin]]
name = "svd-daemon"
path = "src/main.rs"

[[bin]]
name = "svd-restore"
path = "src/bin/svd-restore.rs"
